Fixed spelling errors, updated descriptions, and added proper href links to certain achievements in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -325,7 +325,7 @@
                     </div></td>
                     <td>
                         Defeated <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>, and was made a Samurai.
-                        Complete the main mission: <a class="text-sky-400 hover:text-sky-600" href="">The Hiden Monsters of Okehazama</a>.
+                        Complete the main mission: <a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters of Okehazama</a>.
                     </td>
                 </tr>
 
@@ -632,7 +632,8 @@
                     </div></td>
                     <td>
                         Collected all Guardian Spirits. There are a total of 37 Guardian Spirits. You can view information on Guardian Spirits
-                        <a class="text-sky-400 hover:text-sky-600" href="" target="_blank" rel="noopener noreferrer">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html" 
+                        target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
@@ -676,9 +677,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/friend_to_the_kodama.png" alt="">
                     </div></td>
                     <td>
-                        Obtained a Kodama's Soul Core. Find a Sudama and trade a Soul Core with it. The Soul Core MUST be a 
-                        purified Soul Core! You must rest at a shrine to purify the Soul Cores before trading those Soul Core 
-                        with the Sudama.
+                        Obtained a Kodama's Soul Core. Find a Sudama and trade a Soul Core with it. The Soul Core must be a 
+                        purified Soul Core! You must first rest at a shrine to purify the Soul Core before trading with the 
+                        Sudama.
                     </td>
                 </tr>
 
@@ -690,7 +691,8 @@
                     </div></td>
                     <td>
                         Remodeled a piece of equipment. After finishing the story on Dream of the Samurai (NG), Dream of the 
-                        Strong (NG+) will unlock along with Divine Gear. You can remodel Divine gear by going to Starting Point 
+                        Strong (NG+) will unlock along with <span class="text-divine-text-color">Divine Gear</span>. You can 
+                        remodel <span class="text-divine-text-color">Divine Gear</span> by going to Starting Point 
                         &#10230 Blacksmith &#10230 Remodel. <br><br>
 
                         To unlock the Remodel option the player must complete the sub mission: 
@@ -747,19 +749,19 @@
 
                         <h5 class="text-yellow-400 font-bold">Small Yokai</h5>
                         <div class="flex flex-wrap justify-center items-center gap-3">
-                            <span>1: <a class="text-sky-400 hover:text-sky-600" href="">Gaki</a></span>
-                            <span>2: <a class="text-sky-400 hover:text-sky-600" href="">Yoki</a></span>
-                            <span>3: <a class="text-sky-400 hover:text-sky-600" href="">Enki</a></span>
-                            <span>4: <a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a></span>
-                            <span>5: <a class="text-sky-400 hover:text-sky-600" href="">Kappa</a></span>
-                            <span>6: <a class="text-sky-400 hover:text-sky-600" href="">Red Kappa</a></span>
-                            <span>7: <a class="text-sky-400 hover:text-sky-600" href="">Dweller</a></span>
-                            <span>8: <a class="text-sky-400 hover:text-sky-600" href="">Nurikabe</a></span>
-                            <span>9: <a class="text-sky-400 hover:text-sky-600" href="">Oni-Bi</a></span>
+                            <span>1:  <a class="text-sky-400 hover:text-sky-600" href="">Gaki</a></span>
+                            <span>2:  <a class="text-sky-400 hover:text-sky-600" href="">Yoki</a></span>
+                            <span>3:  <a class="text-sky-400 hover:text-sky-600" href="">Enki</a></span>
+                            <span>4:  <a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a></span>
+                            <span>5:  <a class="text-sky-400 hover:text-sky-600" href="">Kappa</a></span>
+                            <span>6:  <a class="text-sky-400 hover:text-sky-600" href="">Red Kappa</a></span>
+                            <span>7:  <a class="text-sky-400 hover:text-sky-600" href="">Dweller</a></span>
+                            <span>8:  <a class="text-sky-400 hover:text-sky-600" href="">Nurikabe</a></span>
+                            <span>9:  <a class="text-sky-400 hover:text-sky-600" href="">Oni-Bi</a></span>
                             <span>10: <a class="text-sky-400 hover:text-sky-600" href="">Skeleton Warrior</a></span>
                             <span>11: <a class="text-sky-400 hover:text-sky-600" href="">Yamanba</a></span>
                             <span>12: <a class="text-sky-400 hover:text-sky-600" href="">Waira</a></span>
-                            <span>13: <a class="text-sky-400 hover:text-sky-600" href="">Mitsune Yazura</a></span>
+                            <span>13: <a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a></span>
                             <span>14: <a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a></span>
                             <span>15: <a class="text-sky-400 hover:text-sky-600" href="">Toxic Slime</a></span>
                             <span>16: <a class="text-sky-400 hover:text-sky-600" href="">Aberrant Soldier</a></span>
@@ -769,7 +771,7 @@
                             <span>20: <a class="text-sky-400 hover:text-sky-600" href="">Mujina</a></span>
                             <span>21: <a class="text-sky-400 hover:text-sky-600" href="">One-Eyed Imp</a></span>
                             <span>22: <a class="text-sky-400 hover:text-sky-600" href="">One-Eyed Oni</a></span>
-                            <span>23: <a class="text-sky-400 hover:text-sky-600" href="">Onryudo</a></span>
+                            <span>23: <a class="text-sky-400 hover:text-sky-600" href="">Onyudo</a></span>
                             <span>24: <a class="text-sky-400 hover:text-sky-600" href="">Wheelmonk</a></span>
                             <span>25: <a class="text-sky-400 hover:text-sky-600" href="">Flying Bolt</a></span>
                             <span>26: <a class="text-sky-400 hover:text-sky-600" href="">Karasu Tengu</a></span>
@@ -785,15 +787,15 @@
 
                         <h5 class="text-yellow-400 font-bold">Large Yokai</h5>
                         <div class="flex flex-wrap justify-center items-center gap-3">
-                            <span>1: <a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a></span>
-                            <span>2: <a class="text-sky-400 hover:text-sky-600" href="">Gozuki</a></span>
-                            <span>3: <a class="text-sky-400 hover:text-sky-600" href="">Enenra</a></span>
-                            <span>4: <a class="text-sky-400 hover:text-sky-600" href="">Yatsu-no-Kami</a></span>
-                            <span>5: <a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a></span>
-                            <span>6: <a class="text-sky-400 hover:text-sky-600" href="">Onryoki</a></span>
-                            <span>7: <a class="text-sky-400 hover:text-sky-600" href="">Tatarimokke</a></span>
-                            <span>8: <a class="text-sky-400 hover:text-sky-600" href="">Gyuki</a></span>
-                            <span>9: <a class="text-sky-400 hover:text-sky-600" href="">Kasha</a></span>
+                            <span>1:  <a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a></span>
+                            <span>2:  <a class="text-sky-400 hover:text-sky-600" href="">Gozuki</a></span>
+                            <span>3:  <a class="text-sky-400 hover:text-sky-600" href="">Enenra</a></span>
+                            <span>4:  <a class="text-sky-400 hover:text-sky-600" href="">Yatsu-no-Kami</a></span>
+                            <span>5:  <a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a></span>
+                            <span>6:  <a class="text-sky-400 hover:text-sky-600" href="">Onryoki</a></span>
+                            <span>7:  <a class="text-sky-400 hover:text-sky-600" href="">Tatarimokke</a></span>
+                            <span>8:  <a class="text-sky-400 hover:text-sky-600" href="">Gyuki</a></span>
+                            <span>9:  <a class="text-sky-400 hover:text-sky-600" href="">Kasha</a></span>
                             <span>10: <a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna </a></span>
                             <span>11: <a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a></span>
                             <span>12: <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a></span>
@@ -968,7 +970,8 @@
                     </div></td>
                     <td>
                         Obtained all of the Soul Cores. You can view the complete list of Soul Cores
-                        <a class="text-sky-400 hover:text-sky-600" href="">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" 
+                        href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_list.html">here</a>.
                     </td>
                 </tr>
 
@@ -1184,7 +1187,9 @@
                         Appraised your Tea Utensils 50 times. You can appraise Tea Utensils by going to Starting Point &#10230 
                         Hidden Teahouse &#10230 Appraise Tea Utensils. You can check the progress by going to Titles &#10230 
                         Title List &#10230 Ungyo Table List &#10230 Reputable Tea Ceremony Master. The Guardian Spirit 
-                        <a class="text-sky-400 hover:text-sky-600" href="" target="_blank" rel="noopener noreferrer">Isanagami</a> 
+                        <a class="text-sky-400 hover:text-sky-600" 
+                        href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html#Isanagami" 
+                        target="_blank" rel="noopener noreferrer">Isanagami</a> 
                         increases Tea Utensil drop rate by 10 %.
                     </td>
                 </tr>
@@ -1198,10 +1203,11 @@
                     <td>
                         Became Ryunojo the Dung Lover's best friend and recieved the Coiled Snake Helmet Smithing Text. You can
                         find Ryunojo the Dung Lover in the main mission: 
-                        <a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a> in the "Shadow" Region. You need 
-                        to give him 30 Dungballs to obtain this achievement. Noble Dungball count as 2 normal Dungballs. You can
-                        view the video guide 
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=vSlrg3SOfQo" target="_blank" rel="noopener noreferrer">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a> in the Shadow Region (3rd Region). 
+                        You need to give him 30 Dungballs to obtain this achievement. Noble Dungball count as 2 normal Dungballs. 
+                        You can view the video guide 
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=vSlrg3SOfQo" 
+                        target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
             </table>
@@ -1331,7 +1337,7 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/tengu_crusher.png" alt="">
                     </div></td>
                     <td>
-                        Used an attack to knock <a class="text-sky-400 hover:text-sky-600" href="">Minomoto no Yoshitsune</a> 
+                        Used an attack to knock <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a> 
                         off his perch on the bridge in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>.
                     </td>
                 </tr>
@@ -1663,7 +1669,7 @@
                         Obtained the aid of 
                         <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>, 
                         <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a>, and 
-                        <a class="text-sky-400 hover:text-sky-600" href="">Minomoto no Yorimitsu</a> from a Benevolent Grave
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yorimitsu</a> from a Benevolent Grave
                         in the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">A Familiar Glow</a>.
                     </td>
                 </tr>
