--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -250,7 +250,7 @@
                 <!-- ==========
                 Hidden Skills (Button 1)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
                     <img src="./img/hidden_skill_icon.png" alt="" class="h-[75px] w-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
@@ -260,9 +260,9 @@
                 <!-- ==========
                 Weapon Smithing Texts (Button 2)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/weapon_texts.html">
-                    <img src="./img/weapons_icon.png" alt="" class="">
+                    <img src="./img/weapons_icon.png" alt="" class="my-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
                 </a>
@@ -270,9 +270,9 @@
                 <!-- ==========
                 Armor Smithing Texts (Button 3)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/armor_texts.html">
-                    <img src="./img/armor_icon.png" alt="">
+                    <img src="./img/armor_icon.png" alt="" class="my-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
                 </a>
@@ -280,9 +280,9 @@
                 <!-- ==========
                 Misc Smithing Texts (Button 4)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/misc_texts.html">
-                    <img src="./img/misc_smithing_icon.png" alt="">
+                    <img src="./img/misc_smithing_icon.png" alt="" class="my-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
                 </a>
@@ -290,7 +290,7 @@
                 <!-- ==========
                 Mission Progression Unlocks (Button 5)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <img src="./img/missions_logo.png" alt="" class="h-[75px] w-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
