Added unicodes.txt and hidden_skill_drop.png. Updated content in all smithing texts and hidden skills .html files within /smithing_texts/. Added more content to DOTSamurai_enemies.txt.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -262,23 +262,23 @@
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">Description:</span> Smithing Texts are rare items that drop from specific
                 enemies and bosses. All Smithing Texts will drop as an <span class="text-exotic-text-color">Exotic Item</span> 
-                regardless of the difficulty. Once a Smithing Text is obtained the player can go to the Blacksmith to "turn" in the Smithing
-                Text and unlock that specific piece of gear or item to forge.
+                regardless of the difficulty. Once a Smithing Text is obtained the player can go to the Blacksmith &#10230; 
+				Forge to hand over the Smithing Text and unlock that specific piece of gear or item to forge.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">How Luck affects Smithing Texts:</span> Luck does 
+                <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
                 <span class="font-bold text-red-600">NOT</span> affect the drop rate of Smithing Texts and Hidden Skills. Luck 
                 only affects the rarity of items that drop, NOT the chance of an item dropping. Buffs like Luck Bringer Talisman, 
-                and Soul Purge Talisman does not affect the Smithing Text and Hidden Skills drop rate. Tempering Luck+ attributes 
+                and Soul Purge Talisman do not affect the Smithing Text and Hidden Skills drop rate. Tempering Luck+ attributes 
                 on armor, accessories, and Soul Cores also does not affect the Smithing Texts and Hidden Skills drop rate.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">How Item Drop Rate affects Smithing Texts:</span> Item Drop Rate buffs 
+                <span class="font-bold text-red-600">How Item Drop Rate affects Hidden Skills:</span> Item Drop Rate buffs 
                 <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is 
                 no active buff that we can use to manually increase our IDR at will, but we can temper on the attribute 
-                "<span class="text-uncommon-text-color">Increase Item Drop Rate</span>" onto the Weapon & Armor pieces,
+                "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto the Weapon & Armor pieces, 
                 Accessories, and Soul Cores.
             </p>
 
