Added the smithing_text_drop.png image to misc_texts.html.

--- a/nioh2/tools/smithing_texts/misc_texts.html
+++ b/nioh2/tools/smithing_texts/misc_texts.html
@@ -264,6 +264,7 @@
                 regardless of the difficulty. Once a Smithing Text is obtained the player can go to the Blacksmith &#10230; 
 				Forge to hand over the Smithing Text and unlock that specific piece of gear or item to forge.
             </p>
+            <img src="./img/smithing_text_drop.png" alt="">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
