Updated the css in manual.css. Added metadata to various elements across various .html files.

--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -250,7 +250,7 @@
                 <!-- ==========
                 Weapons (Button 1)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     
                     <img class="mask rounded-lg" src="./img/weapon_logo.png" alt="">
