--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -282,7 +282,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Light Armor Sets</h2>
-            <img src="./img/sword_logo_1.png" alt="" class="mask rounded-lg">
+            <img src="./img/sword_logo_1.png" class="mask rounded-lg" alt="Base Game Light Armor logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -922,7 +922,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Medium Armor Sets</h2>
-            <img src="./img/sword_logo_2.png" alt="" class="mask rounded-lg">
+            <img src="./img/sword_logo_2.png" class="mask rounded-lg" alt="Base Game Medium Armor logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -1563,7 +1563,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Heavy Armor Sets</h2>
-            <img src="./img/sword_logo_3.png" alt="" class="mask rounded-lg">
+            <img src="./img/sword_logo_3.png" class="mask rounded-lg" alt="Base Game Heavy Armor logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2152,7 +2152,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dream of the Demon Sets</h2>
-            <img src="./img/dotdemon_logo.png" alt="" class="mask rounded-lg">
+            <img src="./img/dotdemon_logo.png" class="mask rounded-lg" alt="Dream of the Demon Armor Sets logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2420,7 +2420,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dream of the Wise Sets</h2>
-            <img src="./img/dotwise_logo.png" alt="" class="mask rounded-lg">
+            <img src="./img/dotwise_logo.png" class="mask rounded-lg" alt="Dream of the Wise Armor Sets logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2688,7 +2688,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dream of the Nioh Sets</h2>
-            <img src="./img/dotnioh_logo.png" alt="" class="mask rounded-lg">
+            <img src="./img/dotnioh_logo.png" class="mask rounded-lg" alt="Dream of the Nioh Armor Sets logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2958,7 +2958,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Depths of the Underworld Sets</h2>
-            <img src="./img/underworld_logo.png" alt="">
+            <img src="./img/underworld_logo.png" alt="Underworld logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
