Updated the classes for the guardian spirits tier list icons in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -3271,10 +3271,10 @@
                     <td><span class="font-bold">S</span></td>
                     <td>
                         <div class="flex flex-row flex-wrap justify-center items-center gap-2">
-                            <a href="#Baku"><img src="./img/baku.png" alt="Baku icon"></a>
-                            <a href="#Genbu"><img src="./img/genbu.png" alt="Genbu icon"></a>
-                            <a href="#Ho-Oh"><img src="./img/ho-oh.png" alt="Ho - Oh icon"></a>
-                            <a href="#Sohaya"><img src="./img/sohaya.png" alt="Sohaya icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Baku"><img src="./img/baku.png" alt="Baku icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Genbu"><img src="./img/genbu.png" alt="Genbu icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Ho-Oh"><img src="./img/ho-oh.png" alt="Ho - Oh icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Sohaya"><img src="./img/sohaya.png" alt="Sohaya icon"></a>
                         </div>
                     </td>
                 </tr>
@@ -3284,16 +3284,16 @@
                     <td><span class="font-bold">A</span></td>
                     <td>
                         <div class="flex flex-row flex-wrap justify-center items-center gap-2">
-                            <a href="#Ame-no-Mitori"><img src="./img/ame-no-mitori.png" alt="Ame-no-Mitori icon"></a>
-                            <a href="#Shin-Roku"><img src="./img/shin-roku.png" alt="Shin-Roku icon"></a>
-                            <a href="#Hiyobishin"><img src="./img/hiyobishin.png" alt="Hiyobishin icon"></a>
-                            <a href="#Atlas_Bear"><img src="./img/atlas_bear.png" alt="Atlas Bear icon"></a>
-                            <a href="#Yatagarasu"><img src="./img/yatagarasu.png" alt="Yatagarasu icon"></a>
-                            <a href="#Inosasao"><img src="./img/inosasao.png" alt="Inosasao icon"></a>
-                            <a href="#Tengen_Kujaku"><img src="./img/tengen_kujaku.png" alt="Tengen Kujaku icon"></a>
-                            <a href="#Nekomata"><img src="./img/nekomata.png" alt="Nekomata icon"></a>
-                            <a href="#Yumehami"><img src="./img/yumehami.png" alt="Yumehami icon"></a>
-                            <a href="#Oh"><img src="./img/oh.png" alt="Oh icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Ame-no-Mitori"><img src="./img/ame-no-mitori.png" alt="Ame-no-Mitori icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Shin-Roku"><img src="./img/shin-roku.png" alt="Shin-Roku icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Hiyobishin"><img src="./img/hiyobishin.png" alt="Hiyobishin icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Atlas_Bear"><img src="./img/atlas_bear.png" alt="Atlas Bear icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Yatagarasu"><img src="./img/yatagarasu.png" alt="Yatagarasu icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Inosasao"><img src="./img/inosasao.png" alt="Inosasao icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Tengen_Kujaku"><img src="./img/tengen_kujaku.png" alt="Tengen Kujaku icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Nekomata"><img src="./img/nekomata.png" alt="Nekomata icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Yumehami"><img src="./img/yumehami.png" alt="Yumehami icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Oh"><img src="./img/oh.png" alt="Oh icon"></a>
                         </div>
                     </td>
                 </tr>
@@ -3303,16 +3303,16 @@
                     <td><span class="font-bold">B+</span></td>
                     <td>
                         <div class="flex flex-row flex-wrap justify-center items-center gap-2">
-                            <a href="#Makami"><img src="./img/makami.png" alt="Makami icon"></a>
-                            <a href="#Masaru"><img src="./img/masaru.png" alt="Masaru icon"></a>
-                            <a href="#Itokuri"><img src="./img/itokuri.png" alt="Itokuri icon"></a>
-                            <a href="#Nine_Tails"><img src="./img/nine_tails.png" alt="Nine Tails icon"></a>
-                            <a href="#Isanagami"><img src="./img/isanagami.png" alt="Isanagami icon"></a>
-                            <a href="#Saoirse"><img src="./img/saoirse.png" alt="Saoirse icon"></a>
-                            <a href="#Kurama_Tengu"><img src="./img/kurama_tengu.png" alt="Kurama Tengu icon"></a>
-                            <a href="#Blue_Dragon"><img src="./img/blue_dragon.png" alt="Blue Dragon icon"></a>
-                            <a href="#Kuzunoha_The_Fox"><img src="./img/kuzunoha.png" alt="Kuzunoha icon"></a>
-                            <a href="#Janomecho"><img src="./img/janomecho.png" alt="Janomecho icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Makami"><img src="./img/makami.png" alt="Makami icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Masaru"><img src="./img/masaru.png" alt="Masaru icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Itokuri"><img src="./img/itokuri.png" alt="Itokuri icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Nine_Tails"><img src="./img/nine_tails.png" alt="Nine Tails icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Isanagami"><img src="./img/isanagami.png" alt="Isanagami icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Saoirse"><img src="./img/saoirse.png" alt="Saoirse icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Kurama_Tengu"><img src="./img/kurama_tengu.png" alt="Kurama Tengu icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Blue_Dragon"><img src="./img/blue_dragon.png" alt="Blue Dragon icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Kuzunoha_The_Fox"><img src="./img/kuzunoha.png" alt="Kuzunoha icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Janomecho"><img src="./img/janomecho.png" alt="Janomecho icon"></a>
                         </div>
                     </td>
                 </tr>
@@ -3322,16 +3322,16 @@
                     <td><span class="font-bold">B-</span></td>
                     <td>
                         <div class="flex flex-row flex-wrap justify-center items-center gap-2">
-                            <a href="#Kagewani"><img src="./img/kagewani.png" alt="Kagewani icon"></a>
-                            <a href="#Shirohami"><img src="./img/shirohami.png" alt="Shirohami icon"></a>
-                            <a href="#Rokugezo"><img src="./img/rokugezo.png" alt="Rokugezo icon"></a>
-                            <a href="#Usura-Hicho"><img src="./img/usura-hicho.png" alt="Usura-Hicho icon"></a>
-                            <a href="#Yaonami-Hime"><img src="./img/yaonami-hime.png" alt="Yaonami-Hime icon"></a>
-                            <a href="#Hiyokucho"><img src="./img/hiyokucho.png" alt="Hiyokucho icon"></a>
-                            <a href="#Hakutaku"><img src="./img/hakutaku.png" alt="Hakutaku icon"></a>
-                            <a href="#Mizuchi"><img src="./img/mizuchi.png" alt="Mizuchi icon"></a>
-                            <a href="#Ho"><img src="./img/ho.png" alt="Ho icon"></a>
-                            <a href="#Amabie"><img src="./img/amabie.png" alt="Amabie icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Kagewani"><img src="./img/kagewani.png" alt="Kagewani icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Shirohami"><img src="./img/shirohami.png" alt="Shirohami icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Rokugezo"><img src="./img/rokugezo.png" alt="Rokugezo icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Usura-Hicho"><img src="./img/usura-hicho.png" alt="Usura-Hicho icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Yaonami-Hime"><img src="./img/yaonami-hime.png" alt="Yaonami-Hime icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Hiyokucho"><img src="./img/hiyokucho.png" alt="Hiyokucho icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Hakutaku"><img src="./img/hakutaku.png" alt="Hakutaku icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Mizuchi"><img src="./img/mizuchi.png" alt="Mizuchi icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Ho"><img src="./img/ho.png" alt="Ho icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Amabie"><img src="./img/amabie.png" alt="Amabie icon"></a>
                         </div>
                     </td>
                 </tr>
@@ -3341,9 +3341,9 @@
                     <td><span class="font-bold">C</span></td>
                     <td>
                         <div class="flex flex-row flex-wrap justify-center items-center gap-2">
-                            <a href="#Okuri-Inu"><img src="./img/okuri-inu.png" alt="Okuri-Inu icon"></a>
-                            <a href="#Gyokuto"><img src="./img/gyokuto.png" alt="Gyokuto icon"></a>
-                            <a href="#Suzaku"><img src="./img/suzaku.png" alt="Suzaku icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Okuri-Inu"><img src="./img/okuri-inu.png" alt="Okuri-Inu icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Gyokuto"><img src="./img/gyokuto.png" alt="Gyokuto icon"></a>
+                            <a class="border-2 border-transparent rounded hover:border-blue-400" href="#Suzaku"><img src="./img/suzaku.png" alt="Suzaku icon"></a>
                         </div>
                     </td>
                 </tr>
